--- a/src/components/Navbar/Navbar.component.html
+++ b/src/components/Navbar/Navbar.component.html
@@ -16,7 +16,7 @@
         </li>
       </ul>
     </div>
-    <button class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" onclick="logoffEmitter.emit()" >
+    <button *ngIf="isLoggedIn | async" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" (click)="callLogOff()" >
       Logoff
     </button>
   </div>
